# pyMIDIspy

./: .gitignore  .gitmodules  MANIFEST.in  README.md  build.sh  pyproject.toml  setup.py
examples/: bidirectional_test.py  list_destinations.py  monitor_all.py  monitor_one.py  parsed_monitor.py  receive_input.py
pyMIDIspy/: __init__.py  core.py  midi_utils.py
pyMIDIspy/lib/SnoizeMIDISpy.framework/: SnoizeMIDISpy
pyMIDIspy/lib/SnoizeMIDISpy.framework/Versions/A/: SnoizeMIDISpy
pyMIDIspy/lib/SnoizeMIDISpy.framework/Versions/A/Resources/: Info.plist
pyMIDIspy/lib/SnoizeMIDISpy.framework/Versions/A/Resources/MIDI Monitor.plugin/Contents/: Info.plist
pyMIDIspy/lib/SnoizeMIDISpy.framework/Versions/A/Resources/MIDI Monitor.plugin/Contents/MacOS/: MIDI Monitor
src/SnoizeMIDISpy/Framework/: MIDISpyClient.c  MIDISpyClient.h
